force/src/objects/MPM4_BASE__Milestone1_Project__c.object
<CustomObject>
    <description>Passage Technology - Milestones PM+ Free Edition - A project can have many milestones.</description>
    <fields>
        <fullName>Current_Milestone__c</fullName>
        <label>Current Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Practice Assessment</fullName>
                    <default>true</default>
                    <label>Practice Assessment</label>
                </value>
                <value>
                    <fullName>Investment Shift</fullName>
                </value>
                <value>
                    <fullName>Emerging Consumer</fullName>
                </value>
                <value>
                    <fullName>Retail Shift</fullName>
                </value>
                <value>
                    <fullName>Completed Phase 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Duration__c</fullName>
        <formula>IF ( ISBLANK(MPM4_BASE__Actual_Finish_Date__c),   MPM4_BASE__Deadline__c  - IF(ISBLANK( MPM4_BASE__Actual_Start_Date__c),  MPM4_BASE__Kickoff__c,  MPM4_BASE__Actual_Start_Date__c ) + 1, MPM4_BASE__Actual_Finish_Date__c  - IF(ISBLANK( MPM4_BASE__Actual_Start_Date__c),   MPM4_BASE__Kickoff__c ,  MPM4_BASE__Actual_Start_Date__c )+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Finish_Date__c</fullName>
        <inlineHelpText>When did the project close-out?</inlineHelpText>
        <label>Actual Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Actual_Start_Date__c</fullName>
        <inlineHelpText>When did work actually start on the project?</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Date_Rollup_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Rollup Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Deadline__c</fullName>
        <inlineHelpText>The date by which the project is scheduled to be completed by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Description__c</fullName>
        <inlineHelpText>A general description of the project.</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Duration__c</fullName>
        <formula>(MPM4_BASE__Deadline__c - MPM4_BASE__Kickoff__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Exclude_Weekend_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Weekend Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Gantt_Color__c</fullName>
        <label>Gantt Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__GoogleGanntUrl__c</fullName>
        <inlineHelpText>Calculated.</inlineHelpText>
        <label>GoogleGanntUrl</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to make it not visible when displaying external only on the gantt chart</inlineHelpText>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Kickoff__c</fullName>
        <inlineHelpText>What date should this project start?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Milestone_Gant_Filter__c</fullName>
        <inlineHelpText>You may customize what Milestones display on the gantt chart by populating a custom filter in this field. (ex: MPM4_BASE__Complete__c != true AND MPM4_BASE__Internal__c != true)</inlineHelpText>
        <label>Custom Milestone Gantt Filter</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__New_Project_Kickoff_Date__c</fullName>
        <inlineHelpText>Leave blank if you do not want to delay project. If you would like to move the project date select the new kickoff date and it will shift the milestone dates and deadline associated to the project</inlineHelpText>
        <label>New Project Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Next_Project_Milestone_Due_Date__c</fullName>
        <inlineHelpText>Calculated as the next incomplete task with a due date in this project. This includes sub-milestones.</inlineHelpText>
        <label>Next Project Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Next_Project_Top_Milestone_Due_Date__c</fullName>
        <inlineHelpText>The next incomplete milestone due date. This does not include sub-milestones.</inlineHelpText>
        <label>Next Project Top Milestone Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Next_Project_Top_Milestone_Name__c</fullName>
        <inlineHelpText>The next incomplete milestone name. This does not include sub-milestones.</inlineHelpText>
        <label>Next Project Top Milestone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Number_of_Incomplete_Milestones__c</fullName>
        <inlineHelpText>Calculated sum of the number of incomplete milestones assigned to this project. This includes sub-milestones in the project.</inlineHelpText>
        <label>Number of Incomplete Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Number_of_Incomplete_Top_Milestones__c</fullName>
        <inlineHelpText>The number of incomplete milestones that are in this project. This does not count sub-milestones.</inlineHelpText>
        <label>Number of Incomplete Top Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Percent_Complete__c</fullName>
        <formula>IF(TEXT(MPM4_BASE__Status__c) == &apos;Completed&apos;, 1, IF(AND(MPM4_BASE__Total_Open_Task_Count__c == 0,MPM4_BASE__Total_Complete_Task_Count__c == 0), 0, MPM4_BASE__Total_Complete_Task_Count__c / (MPM4_BASE__Total_Complete_Task_Count__c + MPM4_BASE__Total_Open_Task_Count__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Predecessor_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Predecessor project must be in the same program as this project.</errorMessage>
            <filterItems>
                <field>$Source.MPM4_BASE__Program__c</field>
                <operation>equals</operation>
                <valueField>MPM4_BASE__Milestone1_Project__c.MPM4_BASE__Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>MPM4_BASE__Milestone1_Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPM4_BASE__QueueID__c</fullName>
        <description>Contains the value of the QueueID for export and import</description>
        <label>QueueID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Remote_Object_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Object Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_BudgetExpenseSummary__c</fullName>
        <formula>IF( MPM4_BASE__Total_Expense_Budget__c &gt; 0,
IMAGE(
&quot;http://chart.apis.google.com/chart?chtt=Task+Expense+Budget+Analysis&amp;&quot; &amp;
&quot;chxr=0,0,&quot; &amp; Text(max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(MPM4_BASE__Total_Expense_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(MPM4_BASE__Total_Expense_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(MPM4_BASE__Total_Expense_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(MPM4_BASE__Total_Expense_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( MPM4_BASE__Total_Expense_Budget__c / max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( MPM4_BASE__Total_Expense_Budget_from_Milestones__c / max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( MPM4_BASE__Total_Expense_Estimate__c / max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  MPM4_BASE__Total_Expense_Incurred__c / max( MPM4_BASE__Total_Expense_Budget__c,MPM4_BASE__Total_Expense_Budget_from_Milestones__c,MPM4_BASE__Total_Expense_Estimate__c, MPM4_BASE__Total_Expense_Incurred__c) * 100) 
, &quot;Project Expense - Budget, Planned, Estimated, Incurred&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_BudgetMiletoneEstimate__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?chtt=Task+Time+Budget+Analysis&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c)) &amp; &quot;&amp;&quot; &amp;
&quot;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322,666666&amp;&quot;&amp;
&quot;chdl=&quot;&amp;
&quot;Budget (&quot; &amp; TEXT(MPM4_BASE__Total_Hours_Budget__c) &amp; &quot;)&quot;&amp;
&quot;|Planned (&quot; &amp; TEXT(MPM4_BASE__Total_Hours_Budget_from_Milestones__c) &amp; &quot;)&quot;&amp;
&quot;|Estimated (&quot; &amp; TEXT(MPM4_BASE__Total_Hours_Estimate__c) &amp; &quot;)&quot;&amp;
&quot;|Incurred (&quot; &amp; TEXT(MPM4_BASE__Total_Hours_Incurred__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp;
TEXT( MPM4_BASE__Total_Hours_Budget__c / max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c) * 100 )&amp;&quot;|&quot;&amp; 
TEXT( MPM4_BASE__Total_Hours_Budget_from_Milestones__c / max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c) * 100)  &amp;&quot;|&quot; &amp; 
TEXT( MPM4_BASE__Total_Hours_Estimate__c / max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c) * 100 ) &amp;&quot;|&quot; &amp; 
TEXT(  MPM4_BASE__Total_Hours_Incurred__c / max( MPM4_BASE__Total_Hours_Budget__c,MPM4_BASE__Total_Hours_Budget_from_Milestones__c,MPM4_BASE__Total_Hours_Estimate__c, MPM4_BASE__Total_Hours_Incurred__c) * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_Image_HoursSummary__c</fullName>
        <formula>IF( MPM4_BASE__Total_Hours_Budget__c &gt; 0, 
IMAGE(MPM4_BASE__Status_BudgetMiletoneEstimate__c, &quot;Hours Summary: Budgeted, Planned, Estimated and Incurred.&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Summary (chart) - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_Image_OpenVComplete__c</fullName>
        <formula>IF( MPM4_BASE__Status_TasksOpenComplete__c != &apos;&apos;,
IMAGE( MPM4_BASE__Status_TasksOpenComplete__c , &quot;Open vs. Complete Tasks&quot;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks (chart) - Deprec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_Img_OpenLateBlocked__c</fullName>
        <formula>IMAGE( MPM4_BASE__Status_TasksOpenBlockedLate__c , &quot;Open, Late &amp; Blocked Tasks.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks (chart) - Dep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_TasksOpenBlockedLate__c</fullName>
        <formula>IF(max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ) &gt; 0 , 
&quot;http://chart.apis.google.com/chart?chtt=Open+Task+Analysis&amp;chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ))&amp;&quot;&amp;&quot;&amp;
&quot;chco=2299bb,eeaa66,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(MPM4_BASE__Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(MPM4_BASE__Total_Late_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(MPM4_BASE__Total_Blocked_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(MPM4_BASE__Total_Open_Task_Count__c / max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ) *100)&amp;&quot;|&quot;&amp; TEXT(MPM4_BASE__Total_Late_Task_Count__c/ max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ) *100) &amp;&quot;|&quot; &amp; TEXT(MPM4_BASE__Total_Blocked_Task_Count__c/ max(  MPM4_BASE__Total_Open_Task_Count__c ,  MPM4_BASE__Total_Late_Task_Count__c  , MPM4_BASE__Total_Blocked_Task_Count__c ) *100), &apos;/s.gif&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status_TasksOpenComplete__c</fullName>
        <formula>&quot;http://chart.apis.google.com/chart?&quot;&amp;
&quot;chtt=Task+Analysis&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text(MPM4_BASE__Total_Open_Task_Count__c)&amp;&quot;,&quot;&amp;Text(MPM4_BASE__Total_Complete_Task_Count__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT (MPM4_BASE__Total_Open_Task_Count__c) &amp; &quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT (MPM4_BASE__Total_Complete_Task_Count__c) &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Status__c</fullName>
        <inlineHelpText>The current status of the project.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Task_Gant_Filter__c</fullName>
        <inlineHelpText>You may customize what Tasks display on the gantt chart by populating a custom filter in this field. (ex: MPM4_BASE__Complete__c != true AND MPM4_BASE__Internal__c != true)</inlineHelpText>
        <label>Custom Task Gantt Filter</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Blocked_Task_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many tasks associated with this project are blocked? (Calculated)</inlineHelpText>
        <label>Total Blocked Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Complete_Task_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many complete tasks are there in this project?  (Calculated.)</inlineHelpText>
        <label>Total Complete Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total expense budget for this project.</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Budget_from_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from the milestone expense budgets assigned to this project.</inlineHelpText>
        <label>Total Expense Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Estimate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from expense estimates on all child milestones</inlineHelpText>
        <label>Total Expense Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Expense_Incurred__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from expense records related to tasks on all child milestones</inlineHelpText>
        <label>Total Expense Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total hours budget for this project.</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Budget_from_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from hours budgets for milestones in this project.</inlineHelpText>
        <label>Total Hours Budget from Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Estimate__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from hours estimates on all child milestones</inlineHelpText>
        <label>Total Hours Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Hours_Incurred__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from time records related to tasks on all child milestones</inlineHelpText>
        <label>Total Hours Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Late_Task_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many tasks associated with this project are late?  (Calculated)</inlineHelpText>
        <label>Total Late Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Total_Open_Task_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many open tasks are there in this project? (Calculated. Includes Late and Blocked tasks.)</inlineHelpText>
        <label>Total Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Weekday_Duration__c</fullName>
        <label>Weekday Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__hide_delete_checkbox_on_mpp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Delete Checkbox on MPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trending__c</fullName>
        <label>Trending</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Above Target</fullName>
                </value>
                <value>
                    <fullName>On Target</fullName>
                    <default>true</default>
                    <label>On Target</label>
                </value>
                <value>
                    <fullName>Below Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>MPM4_BASE__All</fullName>
        <columns>MPM4_BASE__Account__c</columns>
        <columns>Current_Milestone__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MPM4_BASE__My_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>MPM4_BASE__Deadline__c</columns>
        <columns>MPM4_BASE__Total_Blocked_Task_Count__c</columns>
        <columns>MPM4_BASE__Total_Late_Task_Count__c</columns>
        <columns>MPM4_BASE__Total_Open_Task_Count__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>MPM4_BASE__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Projects</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MPM4_BASE__Kickoff_before_deadline</fullName>
        <active>false</active>
        <description>Kickoff must be less or equal than the deadline</description>
        <errorConditionFormula>NOT(ISNULL(MPM4_BASE__Kickoff__c)) &amp;&amp; NOT(ISNULL(MPM4_BASE__Deadline__c)) &amp;&amp; MPM4_BASE__Deadline__c &lt; MPM4_BASE__Kickoff__c</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Kickoff__c</errorDisplayField>
        <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Total_Expense_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>MPM4_BASE__Total_Expense_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Total_Expense_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPM4_BASE__Total_Hours_Budget_Negative_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>MPM4_BASE__Total_Hours_Budget__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>MPM4_BASE__Total_Hours_Budget__c</errorDisplayField>
        <errorMessage>This value should be a positive number</errorMessage>
    </validationRules>
</CustomObject>